@@ -3,6 +3,11 @@
 passwordMatcher = org.apache.shiro.authc.credential.PasswordMatcher
 iniRealm.credentialsMatcher = $passwordMatcher
 
+# If you want the login to be disabled then use this and configure jonglisto-ng.xml accordingly
+# [main]
+# passwordMatcher = vdr.jonglisto.shiro.JonglistoPasswordMatcher
+# iniRealm.credentialsMatcher = $passwordMatcher
+
 # -----------------------------------------------------------------------------
 # Users and their assigned roles
 # -----------------------------------------------------------------------------
